[package]
name = "easing-function"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.208", optional = true, features = ["derive"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
