[package]
name = "easing-function"
version = "0.1.1"
edition = "2021"
rust-version = "1.65.0"
description = "A Rusty implementation of easing functions for animation tweening"
repository = "https://github.com/khonsulabs/easing-function"
license = "MIT OR Apache-2.0"
keywords = ["easing", "tweening"]
categories = ["algorithms"]
readme = "./README.md"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.208", optional = true, features = ["derive"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
